--- a/views/testAPIEnsembl.ejs
+++ b/views/testAPIEnsembl.ejs
@@ -112,31 +112,31 @@
         <div id='contentGtext'>
           <p>GTEX Information</p>
           <div id="info_rs">
-            <table id="info_var_gen">
+            <!-- <table id="info_var_gen">
               <thead id="tabl_var_thead">
                 <th>Genecode Id</th>
                 <th>Gene Symbol</th>
                 <th>Variant Id</th>
               </thead>
               <tbody>
-                <% for (let j in data[i].gtexvalue) {
+                <%// for (let j in data[i].gtexvalue) {
               %>
                   <tr>
                     <td>
-                      <%= data[i].gtexvalue[j].geneid%>
+                      <%= //data[i].gtexvalue[j].geneid%>
                     </td>
                     <td>
-                      <%= data[i].gtexvalue[j].symbol%>
+                      <%= //data[i].gtexvalue[j].symbol%>
                     </td>
                     <td>
-                      <%= data[i].gtexvalue[j].variantid%>
+                      <%= //data[i].gtexvalue[j].variantid%>
                     </td>
                   </tr>
                   <%
-            }
+            //}
             %>
               </tbody>
-            </table>
+            </table> -->
           </div>
         </div>
         <div id='contentGwas'>
