--- a/public/Stylesheet/index.css
+++ b/public/Stylesheet/index.css
@@ -5,6 +5,11 @@ body {
   background-color: #FFF;
 }
 
+#test,
+#input_id {
+  display: table-cell;
+}
+
 .research {
   background-color: #eeeeee;
   border-style: solid;
@@ -12,6 +17,44 @@ body {
   border-color: #dddddd;
   margin-top: 20px;
   padding: 10px 10px 10px 10px;
+}
+
+
+#pop,
+#wind_size,
+option {
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: normal;
+  letter-spacing: 1px;
+  padding-left: 3px;
+
+}
+
+#wind_size {
+  padding-left: 30px;
+}
+
+#search_loc,
+#submit_loc {
+  display: table-cell;
+}
+
+#select_name,
+#select_size {
+  box-sizing: border-box;
+  height: 40px;
+  box-shadow: 1px 1px 1px #aaa;
+  margin-top: 5px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px 10px 5px 10px;
+}
+
+#global {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid grey;
 }
 
 #form_snpInfo #rs {
@@ -45,6 +88,7 @@ body {
   font-size: 12px;
   font-weight: normal;
   letter-spacing: 1px;
+  margin-right: 3px;
 }
 
 #form_loc #location_nbMax {
@@ -61,6 +105,7 @@ body {
   font-size: 12px;
   font-weight: normal;
   letter-spacing: 1px;
+  margin-right: 15px;
 }
 
 #form_loc #submit_location {
