--- a/public/Stylesheet/APIEnsembl.css
+++ b/public/Stylesheet/APIEnsembl.css
@@ -10,6 +10,7 @@
   #content {
     display: table-cell;
     padding: 10px;
+    overflow: hidden
   }
 
   p {
@@ -30,8 +31,6 @@
 
   .popup .popuptext {
     visibility: hidden;
-    width: auto;
-    height: auto;
     background-color: #555;
     color: #fff;
     text-align: center;
@@ -70,7 +69,7 @@
   }
 
   #liste_rs {
-    width: 150px;
+    width: 130px;
     margin-right: 10px;
     border-right: 1px solid black;
   }
@@ -79,9 +78,13 @@
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 1600px;
+    width: 1650px;
     background-color: #eeeeee;
+
   }
+
+  #all_content {}
+
 
   #RsIdbox {
     color: #fff;
@@ -99,11 +102,17 @@
     border-spacing: 10px 5px;
   }
 
+  #contentGtext {
+    height: 360px;
+    overflow-y: scroll;
+  }
+
   #info_var_gen,
   #table_info {
     border-spacing: 10px 5px;
     width: 100%;
     border-collapse: separate;
+
   }
 
   td,
@@ -118,10 +127,32 @@
   #inner_content_glob1,
   #inner_content_glob2,
   #inner_content_glob3,
-  #inner_content_glob4 {
+  #inner_content_glob4,
+  #inner_content_glob5,
+  #inner_content_glob6,
+  #inner_content_glob7,
+  #inner_content_glob8,
+  #inner_content_glob9 {
     background-color: #eeeeee;
     border-bottom: 1px solid #000000;
     overflow: hidden;
+  }
+
+  #info_rs_gwas {
+    width: auto;
+    max-height: 360px;
+  }
+
+  #info_rs_gtex {
+    width: auto;
+    max-height: 360px;
+    overflow-y: scroll;
+  }
+
+  #info_rs_ensembl {
+    width: auto;
+    padding: 8px;
+    max-height: 360px;
   }
 
   #variant {
@@ -138,8 +169,7 @@
   #contentGtext,
   #contentGwas {
     width: auto;
-    min-width: 454px;
     display: table-cell;
     border-left: 3px solid #D3D3D3;
-    overflow: hidden;
+    height: 360px;
   }
