--- a/views/testAPIEnsembl.ejs
+++ b/views/testAPIEnsembl.ejs
@@ -16,7 +16,7 @@
     <header id="header" class="header" role="banner">
       <div class="banner_div">
         <div id="acceuil">
-          <a href="/"> HOME </a>
+          <a href="/"><img id="logo" src="img/logo.png" alt="logo" width="42" height="42" /></a>
         </div>
         <div id="dl">
           <label for="champ_nom_file">Nom du fichier texte a dl</label>
@@ -240,6 +240,8 @@
       </div>
     </div>
   </div>
+
+
   <script>
     function myFunction(i, j) {
       var popup = document.getElementById("study_" + i + "_" + j)
@@ -248,7 +250,6 @@
     }
 
   </script>
-
 </body>
 
 
