--- a/public/Stylesheet/APIEnsembl.css
+++ b/public/Stylesheet/APIEnsembl.css
@@ -1,5 +1,5 @@
   #header {
-    height: 80px;
+    height: 110px;
     background-color: #5f5f5f;
     padding: 0 3rem;
     overflow: hidden;
@@ -38,6 +38,34 @@
     padding: 8px 0;
   }
 
+  #footer {
+    height: 60px;
+    background-color: #5f5f5f;
+    overflow: hidden;
+    max-width: 100%;
+    background-size: cover;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: table-cell;
+  }
+
+
+
+  #logo {
+    margin-top: 20px;
+  }
+
+  #acceuil {
+    display: table-cell;
+    padding: 10px;
+  }
+
+  #dl {
+    display: table-cell;
+    padding: 10px;
+  }
 
 
   /* Toggle this class - hide and show the popup */
