--- a/public/Stylesheet/APIEnsembl.css
+++ b/public/Stylesheet/APIEnsembl.css
@@ -5,20 +5,35 @@
     overflow: hidden;
     width: 100%;
   }
-
+  
   #liste_rs,
   #content {
     display: table-cell;
     padding: 10px;
     overflow: hidden
   }
-
+  
   p {
     font-style: normal;
     font-size: 16px;
     color: #205493;
   }
-
+  
+  #title {
+    display: table-cell;
+    text-align: center;
+    padding-top: 30px;
+  }
+  
+  h {
+    font-style: normal;
+    font-size: 40px;
+    font-family: "Segoe print";
+    color: #f1f1f1;
+    text-align: center;
+    margin: 10px;
+  }
+  
   .popup {
     cursor: pointer;
     -webkit-user-select: none;
@@ -26,9 +41,8 @@
     -ms-user-select: none;
     user-select: none;
   }
-
   /* The actual popup */
-
+  
   .popup .popuptext {
     visibility: hidden;
     background-color: #555;
@@ -37,7 +51,7 @@
     border-radius: 6px;
     padding: 8px 0;
   }
-
+  
   #footer {
     height: 60px;
     background-color: #5f5f5f;
@@ -50,34 +64,33 @@
     right: 0;
     display: table-cell;
   }
-
-
-
-  #logo {
-    margin-top: 20px;
-  }
-
+  
   #acceuil {
     display: table-cell;
-    padding: 10px;
   }
-
+  
+  #txt_dl {
+    font-style: normal;
+    font-size: 25px;
+    font-family: "Segoe print";
+    color: #f1f1f1;
+    text-align: center;
+  }
+  
   #dl {
     display: table-cell;
     padding: 10px;
+    margin: 150px;
   }
-
-
   /* Toggle this class - hide and show the popup */
-
+  
   .popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
   }
-
   /* Add animation (fade in the popup) */
-
+  
   @-webkit-keyframes fadeIn {
     from {
       opacity: 0;
@@ -86,7 +99,7 @@
       opacity: 1;
     }
   }
-
+  
   @keyframes fadeIn {
     from {
       opacity: 0;
@@ -95,25 +108,23 @@
       opacity: 1;
     }
   }
-
+  
   #liste_rs {
     width: 130px;
     margin-right: 10px;
     border-right: 1px solid black;
   }
-
+  
   #global {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 1650px;
     background-color: #eeeeee;
-
   }
-
+  
   #all_content {}
-
-
+  
   #RsIdbox {
     color: #fff;
     background-color: #5f5f5f;
@@ -124,25 +135,24 @@
     color: #f1f1f1;
     padding: 0 1em 0 1em;
   }
-
+  
   #info_base {
     border-collapse: collapse;
     border-spacing: 10px 5px;
   }
-
+  
   #contentGtext {
     height: 360px;
     overflow-y: scroll;
   }
-
+  
   #info_var_gen,
   #table_info {
     border-spacing: 10px 5px;
     width: 100%;
     border-collapse: separate;
-
   }
-
+  
   td,
   th {
     padding: 1em 1em 5em 1em;
@@ -150,7 +160,7 @@
     text-align: left;
     border-bottom: 1px solid #D3D3D3;
   }
-
+  
   #inner_content_glob0,
   #inner_content_glob1,
   #inner_content_glob2,
@@ -165,34 +175,34 @@
     border-bottom: 1px solid #000000;
     overflow: hidden;
   }
-
+  
   #info_rs_gwas {
     width: auto;
     max-height: 360px;
   }
-
+  
   #info_rs_gtex {
     width: auto;
     max-height: 360px;
     overflow-y: scroll;
   }
-
+  
   #info_rs_ensembl {
     width: auto;
     padding: 8px;
     max-height: 360px;
   }
-
+  
   #variant {
     padding: 0 1em 0 1em;
   }
-
+  
   #info_base .th {
     font-style: normal;
     font-size: 14px;
     padding: 0 3rem;
   }
-
+  
   #contentEnsembl,
   #contentGtext,
   #contentGwas {
