--- a/public/Stylesheet/location.css
+++ b/public/Stylesheet/location.css
@@ -1,48 +1,64 @@
- #header {
-   height: 110px;
-   background-color: #5f5f5f;
-   padding: 0 3rem;
-   overflow: hidden;
-   width: 1650px;
-   margin-left: auto;
-   margin-right: auto;
- }
- 
- #title,
- #acceuil {
-   display: table-cell;
- }
- 
- h {
-   font-style: normal;
-   font-size: 40px;
-   font-family: "Segoe print";
-   color: #f1f1f1;
-   text-align: center;
-   margin: 10px;
-   margin-left: 150px;
- }
- 
- #flipped,
- #content {
-   margin-left: auto;
-   margin-right: auto;
-   width: 1650px;
-   overflow-x: scroll;
-   transform: rotateX(180deg);
-   -ms-transform: rotateX(180deg);
-   /* IE 9 */
-   -webkit-transform: rotateX(180deg);
-   /* Safari and Chrome */
- }
- 
- th {}
- 
- #table_rs {
-   display: table-cell;
-   padding: 8px;
-   margin: 10px;
-   border-right: 1px solid black;
-   overflow-x: scroll;
-   width: 1650px;
- }
+#header {
+  height: 110px;
+  background-color: #5f5f5f;
+  padding: 0 3rem;
+  overflow: hidden;
+  width: 1650px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#title,
+#acceuil {
+  display: table-cell;
+}
+
+h {
+  font-style: normal;
+  font-size: 40px;
+  font-family: "Segoe print";
+  color: #f1f1f1;
+  text-align: center;
+  margin: 10px;
+  margin-left: 150px;
+}
+
+#content {
+  margin-top: 10px;
+  overflow-x: scroll;
+  transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  /* IE 9 */
+  -webkit-transform: rotateX(180deg);
+  /* Safari and Chrome */
+}
+
+#flipped {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1650px;
+  background-color: #eeeeee;
+  border: 1px solid grey;
+}
+
+th {
+  border-bottom: 1px solid black;
+  margin-bottom: 5px;
+}
+
+#table_rs {
+  display: table-cell;
+  padding: 8px;
+  margin: 10px;
+  border-right: 1px solid black;
+  overflow-x: scroll;
+  width: 1650px;
+  transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  /* IE 9 */
+  -webkit-transform: rotateX(180deg);
+  /* Safari and Chrome */
+}
+
+
+}
