--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,42 +15,39 @@
   <div class="research" id="button_search">
     <div id='global'>
       <form id="form_snpInfo" method="post" action="/testAPIEnsembl">
-
         <div id='test'>
-          <input type="search" name="rs" placeholder="Search for rs" id="rs" class="rs" />
-          <span id="string-msg">Exemple :   rs699</span>
+          <input type="search" name="rs" placeholder="Search for rs" id="rs" class="rs" /> <span id="string-msg">Exemple :   rs699</span>
           <br />
           <label id='pop'>Population : </label>
           <select id='select_name' name="population">
-        <%
+            <%
         if (data) {
           for (let i in data) {
           %>
-        <option value="<%= data[i].name %>"><%= data[i].desc %></option>
-        <%
+              <option value="<%= data[i].name %>">
+                <%= data[i].desc %>
+              </option>
+              <%
         }
         }
-        %>        
-      </select>
-
+        %>
+          </select>
           <label id="wind_size">Windows size : </label>
           <select id='select_size' name="size">
-        <option value="500">500</option>
-        <option value="1000">1000</option>
-        <option value="1500">1500</option>
-        <option value="2000">2000</option>
-        <option value="2500">2500</option>
-        <option value="3000">3000</option>
-        <option value="3500">3500</option>
-        <option value="4000">4000</option>
-        <option value="4500">4500</option>
-        <option value="500">5000</option>
-      </select>
-          <br />
-        </div>
+            <option value="500">500</option>
+            <option value="1000">1000</option>
+            <option value="1500">1500</option>
+            <option value="2000">2000</option>
+            <option value="2500">2500</option>
+            <option value="3000">3000</option>
+            <option value="3500">3500</option>
+            <option value="4000">4000</option>
+            <option value="4500">4500</option>
+            <option value="500">5000</option>
+          </select>
+          <br /> </div>
         <div id='input_id'>
-          <input type="submit" id="submit_id" class="submit" value="Research" /></div>
-
+          <input type="submit" id="submit_id" class="submit" value="Research" /> </div>
       </form>
     </div>
     <form id="form_loc" method="post" action="/location">
@@ -58,70 +55,70 @@
         <input type="search" placeholder="Search for location" name="location" id="location" />
         <input type="search" placeholder="Nb max de rs recupere" name="location_nbMax" id="location_nbMax" />
         <label id='pop'>Population : </label>
-          <select id='select_name' name="population">
-        <%
+        <select id='select_name' name="population">
+          <%
         if (data) {
           for (let i in data) {
           %>
-        <option value="<%= data[i].name %>"><%= data[i].desc %></option>
-        <%
+            <option value="<%= data[i].name %>">
+              <%= data[i].desc %>
+            </option>
+            <%
         }
         }
-        %>        
-      </select>
-
-          <label id="wind_size">Windows size : </label>
-          <select id='select_size' name="size">
-        <option value="500">500</option>
-        <option value="1000">1000</option>
-        <option value="1500">1500</option>
-        <option value="2000">2000</option>
-        <option value="2500">2500</option>
-        <option value="3000">3000</option>
-        <option value="3500">3500</option>
-        <option value="4000">4000</option>
-        <option value="4500">4500</option>
-        <option value="500">5000</option>
-      </select>
-          <br />
-      </div>
+        %>
+        </select>
+        <label id="wind_size">Windows size : </label>
+        <select id='select_size' name="size">
+          <option value="500">500</option>
+          <option value="1000">1000</option>
+          <option value="1500">1500</option>
+          <option value="2000">2000</option>
+          <option value="2500">2500</option>
+          <option value="3000">3000</option>
+          <option value="3500">3500</option>
+          <option value="4000">4000</option>
+          <option value="4500">4500</option>
+          <option value="500">5000</option>
+        </select>
+        <br /> </div>
       <div id='submit_loc'>
-        <input type="submit" id="submit_location" class="submit_location" value="Research" />
-      </div>
+        <input type="submit" id="submit_location" class="submit_location" value="Research" /> </div>
     </form> <span id="string-msg">Exemple :  10:95000000-96000000</span>
     <div id="RsIdbox">
       <form id="form_fileup" method="post" action="/fileup" enctype="multipart/form-data">
         <input type='file' id="file" name='fileToUpload'>
+        <br /> <span id="string-msg">Liste de rs_id (un/ligne)</span>
         <br />
         <label id='pop'>Population : </label>
-          <select id='select_name' name="population">
-        <%
+        <select id='select_name' name="population">
+          <%
         if (data) {
           for (let i in data) {
           %>
-        <option value="<%= data[i].name %>"><%= data[i].desc %></option>
-        <%
+            <option value="<%= data[i].name %>">
+              <%= data[i].desc %>
+            </option>
+            <%
         }
         }
-        %>        
-      </select>
-
-          <label id="wind_size">Windows size : </label>
-          <select id='select_size' name="size">
-        <option value="500">500</option>
-        <option value="1000">1000</option>
-        <option value="1500">1500</option>
-        <option value="2000">2000</option>
-        <option value="2500">2500</option>
-        <option value="3000">3000</option>
-        <option value="3500">3500</option>
-        <option value="4000">4000</option>
-        <option value="4500">4500</option>
-        <option value="500">5000</option>
-      </select>
+        %>
+        </select>
+        <label id="wind_size">Windows size : </label>
+        <select id='select_size' name="size">
+          <option value="500">500</option>
+          <option value="1000">1000</option>
+          <option value="1500">1500</option>
+          <option value="2000">2000</option>
+          <option value="2500">2500</option>
+          <option value="3000">3000</option>
+          <option value="3500">3500</option>
+          <option value="4000">4000</option>
+          <option value="4500">4500</option>
+          <option value="500">5000</option>
+        </select>
         <input type='submit' id="valid" value='valider'>
-        <br/> <span id="string-msg">Liste de rs_id (un/ligne)</span> 
-      </form>
+        <br/> </form>
     </div>
   </div>
   <div id='lien'> </div>
